<resources>
    <string name="app_name">Tabellion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Navigation</string>
    <string name="nav_header_subtitle">Choose your option.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_pending_to_sign">Pending To Sign</string>
    <string name="nav_wait_for_finishing">In Progress</string>
    <string name="nav_history_contracts">Contracts Archive</string>
    <string name="nav_discover_more">Discover More</string>
    <string name="nav_share">Share</string>
    <string name="nav_start_signing">Start Signing</string>
    <string name="nav_new_document">Start New Contract</string>
    <string name="nav_how_to">How To?</string>
    <string name="action_settings">Settings</string>
    <string name="offeror">Sign To Send</string>
    <string name="offeree">Sign To Finish</string>
    <string name="current_status">Status: %s</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="title_activity_new_document">NewDocument</string>
    <string name="contract_name">Contract Name</string>
    <string name="upload_mark_down_file">Select Contract</string>
    <string name="select_one_of_the_button">OR</string>
    <string name="create_mark_down_contract">Create Contract</string>
    <string name="type_contract_section_details">Details</string>
    <string name="type_contract_section_main_title">Main Title (Optional)</string>
    <string name="type_contract_section_sub_title">Sub Title (Optional)</string>
    <string name="re_upload_mark_down_file">Select Contract Again</string>
    <string name="edit_contract">Edit Contract</string>
    <string name="leave_comment_on_contract">Write your comment here</string>
    <string name="confirm_comment_and_exit">Save&amp;Exit </string>
    <string name="comment_dialog_title">Leave Comment</string>
    <string name="cannot_send_comment">Failed to send comment, please try again…</string>
    <string name="start_edit">Start Edit</string>
    <string name="cannot_read_comment">Failed to read comment, please try again…</string>
    <string name="cannot_download_markdown">Cannot download editable contract, please try again…</string>
    <string name="comment">Comment: %s</string>
    <string name="revised_contract_submitted">Revised contract submitted…</string>
    <string name="revised_contract_submit_failed">Revised contract cannot be submitted…</string>
    <string name="revised_contract_upload_failed">Revised contract cannot be uploaded…</string>
    <string name="processing_contract_for_extracting_text_from_pdf">Processing…</string>
    <string name="contract_description">Description</string>
    <string name="please_fill_all_blank">Please fill in all blanks</string>
    <string name="please_fill_contract_name">Please fill the Contract Name first</string>
    <string name="please_select_a_file">Please select a contract file to upload</string>
    <string name="select_contract_to_upload">Select a File to Upload</string>
    <string name="no_file_manager_warning">Please install a file manager first</string>
    <string name="illegal_file_path">The path is illegal, please try again</string>
    <string name="start_upload_contract">Upload</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>
    <string name="please_try_again_later">Something went wrong, please try again later (%s)</string>
    <string name="who_to_send">Email of the person you want to send</string>
    <string name="finish">Finish</string>
    <string name="title_activity_register_new_user">RegisterNewUser</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="password_again">Enter your password again</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="take_photo_and_continue">Take A Photo And Continue</string>
    <string name="two_passwords_not_equal">The passwords you have entered twice are not the same.</string>
    <string name="unknown_error">Something just went wrong, please try again later.</string>
    <string name="title_activity_login">Tabellion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="to_offeree_email">To: %s</string>
    <string name="from_offeror_email">From: %s</string>
    <string name="download_contract">Download Contract</string>
    <string name="start_signing">Start Signing</string>
    <string name="review_contract">Review Contract</string>
    <string name="instructions">Place your fingertip on the sensor to sign.</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="uploading_signature">Uploading Your Sign With Server</string>
    <string name="signature_verified_success">Signature Verified Succeeded!</string>
    <string name="signature_verified_fail">Signature Verified Failed!</string>
    <string name="syncing_with_server">Syncing With Server</string>
    <string name="syncing_with_server_detail">Syncing With Server (%d/%d)</string>
    <string name="wait_for_other_to_sign">Waiting For Signing</string>
    <string name="finishing">Finalizing</string>
    <string name="awaiting_revoke">Awaiting Revoke</string>
    <string name="revoked_by_offeror">Revoked By Contractor</string>
    <string name="properly_finished">Properly Finished</string>
    <string name="unknown_status">Unknown Status</string>
    <string name="signing_going_to_next_page"></string>
    <string name="signing_going_to_previous_page"></string>
    <string name="next_page_button">Next</string>
    <string name="previous_page_button">Previous</string>
    <string name="save_and_go_back">Save &amp; Back</string>
    <string name="remove_finger">Please Remove Your Finger from the Sensor Temporarily.</string>
    <string name="currently_signing">Currently Signing</string>
    <string name="put_finger_on_sensor">Please put your finger on the fingerprint sensor</string>
    <string name="registering">Registering, please wait</string>
    <string name="biometric_changed">Your Biometric Info has changed since last time, re-register required!</string>
    <string name="hello">Hello, %s</string>
    <string name="hidden">Hidden Content</string>
    <string name="want_to_send_contract">%s wants to send you a new contract!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_getting_contract_from_offeror">
        By clicking on the Confirm button, you will be able to see the contract name and description and
        the person identified below will be able to see your photo for final confirmation. Would you like to proceed?
    </string>
    <string name="confirm_sending_contract_to_offeree">
        By clicking on the Confirm button, the person identified below will be able to sign your contract. Would you like to proceed?
    </string>
    <string name="notification">Notification</string>
    <string name="user_photo">User Photo</string>
    <string name="check_connection">Please check your internet connection</string>
    <string name="loading">Loading</string>
    <string name="wait_for_offeror_first_before_confirm">Please wait for the person who start the contract to finish signing.</string>
    <string name="talking_with_server">Talking with server, please wait</string>
    <string name="success">Success</string>
    <string name="register">Register</string>
    <string name="biometric_title_register">Registration</string>
    <string name="biometric_subtitle_register">Identity Confirmation Required</string>
    <string name="biometric_description_register">By registering a new account, you have acknowledged and agreed all of our rules.</string>
    <string name="help_for_biometric">Please reach to Myles for more information.</string>
    <string name="ok">OK</string>
    <string name="failed">Failed</string>
    <string name="unknown_error_for_biometric">Unknown error happened! Going to try in an alternative authentication way!</string>
    <string name="root_access_detected">Root access is detected, please be notified that your environment is not safe!</string>
    <string name="registration_failed">Registration Failed!</string>
    <string name="waiting_for_internet">Awaiting Internet Connection</string>
    <string name="checking_environment">Checking Environment</string>
    <string name="re_registering_info">Re-registering account(s) (%d/%d)</string>
    <string name="re_registering_label">Re-registering</string>
    <string name="waiting_for_rendering">Waiting for server to finish rendering
        \nYou can skip the wait now, your contract will appear in your main screen once we get the response from the server</string>
    <string name="excuse_the_wait">Skip the Wait</string>
    <string name="revoke">Revoke</string>
    <string name="revoke_request_sent">Revoke Request Sent</string>
    <string name="upload_fail">Upload failed!</string>
    <string name="render_fail">Render failed!</string>
    <string name="signature_verification_request_submitted">Signature Verification Request Sent!</string>
    <string name="wait_for_contracts_to_be_updated">Contracts are still being synced, please wait.</string>
    <string name="verifying_signature">Verifying</string>
    <string name="debug_transition_time">Transition page time(1000 = 1s; leave this blank if you do not want to modify)</string>
    <string name="debug_swipe_back_enabled">Check this to enable swipe back feature during signing.</string>
    <string name="cannot_go_forward_during_signing">You have to use your fingerprint to sign this page.</string>
    <string name="already_first_page_during_signing">You are currently in the first page.</string>
    <string name="already_last_page_during_signing">You are currently in the last page.</string>
    <string name="user_is_in_review_session_during_signing">You are reviewing signed pages. Swipe Right to go backward; swipe left to go forward.</string>
    <string name="user_is_in_signing_session_during_signing">Put your finger on the fingerprint sensor to sign. Press back to abort.</string>
    <string name="user_is_in_signing_session_last_page_during_signing">By confirming this page, your signatures will be uploaded along with the contracts.</string>
    <string name="taking_screenshot">Taking Screenshot…</string>
    <string name="denied_permission_for_taking_screenshot">Please give us permission to capture your screen…</string>
    <string name="sign_with_your_fingerprint_note">Put your finger on the fingerprint sensor to sign. Press back to abort.</string>
    <string name="offeror_upload_photo_msg">Securing your photo…</string>
    <string name="title_of_prompt_for_showing_fingers">Gesture Verification</string>
    <string name="something_recoverable_went_wrong">Don\'t panic, let\'s give another try! :)</string>
    <string name="prompt_for_showing_fingers">Please show %d of fingers when taking photo</string>
</resources>