<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterNewUser"
    tools:showIn="@layout/activity_register_new_user">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_new_user_info_container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".RegisterNewUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:showIn="@layout/activity_register_new_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_new_user_first_name"
            android:layout_width="358dp"
            android:layout_height="55dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="27dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_new_user_last_name"
            android:layout_width="358dp"
            android:layout_height="55dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="27dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_new_user_first_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_new_user_email"
            android:layout_width="358dp"
            android:layout_height="55dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="27dp"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_new_user_last_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_new_user_password"
            android:layout_width="358dp"
            android:layout_height="55dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="27dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_new_user_email" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_new_user_password_for_confirmation"
            android:layout_width="358dp"
            android:layout_height="55dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="27dp"
            android:ems="10"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_new_user_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/register_new_user_fingerprint_container"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/register_new_user_fingerprint_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/put_finger_on_sensor"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/register_new_user_fingerprint_imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:src="@drawable/fingerprint"
            android:layout_below="@+id/register_new_user_fingerprint_textView"
            />
    </RelativeLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/register_new_user_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="16dp"
        android:text="@string/take_photo_and_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>